--- a/Makefile.env
+++ b/Makefile.env
@@ -5,17 +5,17 @@ REPO_NAME=awesome-api-repository
 APP_PORT=9000
 GREEN_TASK_FAMILY_PREFIX=GreenTaskDefinition
 BLUE_TASK_FAMILY_PREFIX=BlueTaskDefinition
-LOG_GROUP=BlueGreenAppStack1-ServiceLogGroup-1GMGJHEBYWOX3
-TASK_SUBNETS=subnet-032a96cf00eed7dbd,subnet-02649dbcdb178ec56
-TASK_SECURITY_GROUPS=sg-0185a55622efb1691
-SERVICE_ARN=arn:aws:ecs:REGION:AWS_ACCOUNT_NUMBER:service/AwesomeApiService
-CLUSTER_ARN=arn:aws:ecs:REGION:AWS_ACCOUNT_NUMBER:cluster/BlueGreenCluster
-TASK_ROLE_ARN=arn:aws:iam::AWS_ACCOUNT_NUMBER:role/BlueGreenAppStack1-TaskRole-1JHTAT6M0TTFU
-EXECUTION_ROLE_ARN=arn:aws:iam::AWS_ACCOUNT_NUMBER:role/BlueGreenAppStack1-TaskExecutionRole-WEQXNF9LLPFG
-BLUE_TARGET_GROUP_ARN=arn:aws:elasticloadbalancing:REGION:AWS_ACCOUNT_NUMBER:targetgroup/BlueG-BlueS-LVLIGQILG2BQ/d162ce281967f716
-GREEN_TARGET_GROUP_ARN=arn:aws:elasticloadbalancing:REGION:AWS_ACCOUNT_NUMBER:targetgroup/BlueG-Green-IFFR6P45HAIM/382da25238e742a6
-LIVE_LISTENER_ARN=arn:aws:elasticloadbalancing:REGION:AWS_ACCOUNT_NUMBER:listener/app/BlueG-LoadB-1TEPNOAAGT51R/e06ecd9653b94c25/534bdbba29c5f01e
-TEST_LISTENER_ARN=arn:aws:elasticloadbalancing:REGION:AWS_ACCOUNT_NUMBER:listener/app/BlueG-LoadB-1TEPNOAAGT51R/e06ecd9653b94c25/74246654da10bca2
+LOG_GROUP=ecs-app-ServiceLogGroup-vvLvHHfoi43B
+TASK_SUBNETS=subnet-092ac72fce1ba67df,subnet-0577193dd74e94c97
+TASK_SECURITY_GROUPS=sg-0620a868957b5e22e
+SERVICE_ARN=arn:aws:ecs:us-east-1:877267163556:service/BlueGreenCluster/AwesomeApiService
+CLUSTER_ARN=arn:aws:ecs:us-east-1:877267163556:cluster/BlueGreenCluster
+TASK_ROLE_ARN=arn:aws:iam::877267163556:role/BlueGreenAppStack1-TaskRole-1JHTAT6M0TTFU
+EXECUTION_ROLE_ARN=arn:aws:iam::877267163556:role/ecs-app-TaskRole-N310QH5J621K
+BLUE_TARGET_GROUP_ARN=arn:aws:elasticloadbalancing:us-east-1:877267163556:targetgroup/ecs-i-BlueS-4LVJMI1XFSVY/818aedf9475b81c7
+GREEN_TARGET_GROUP_ARN=arn:aws:elasticloadbalancing:us-east-1:877267163556:targetgroup/ecs-i-Green-JGG1NZGFMYCP/09964638c4a2473a
+LIVE_LISTENER_ARN=arn:aws:elasticloadbalancing:us-east-1:877267163556:listener/app/ecs-i-LoadB-1MO5T0E6UCIJP/47f8b811ed2e0deb/42ccaafcd7669d25
+TEST_LISTENER_ARN=arn:aws:elasticloadbalancing:us-east-1:877267163556:listener/app/ecs-i-LoadB-1MO5T0E6UCIJP/47f8b811ed2e0deb/718fd6a7027b57ff
 TEMPLATE_BASE_PATH=infrastructure
 TASK_DEFINITION_FILE=taskDefinition.json
 TASK_DEF_TEMPLATE=TaskDefinition.template.json
